# QTrader

./: .envrc.example  .gitignore  .markdownlintrc  .pre-commit-config.yaml  CHANGELOG.md  CONSOLIDATION_COMPLETE.md  DATA_LAYER_MIGRATION.md  DIVIDEND_CALCULATION_BUG_REPORT.md  LICENSE  QTrader.code-workspace  QUICK_REFERENCE.md  README.md  RISK_MANAGER_EXPLANATION.md  STAGE_6B_EXTENSION_IMPLEMENTATION_PLAN.md  STAGE_6B_IMPLEMENTATION_PLAN.md  TODO.md  basic_run_example.py  full_run_example.py  main.py  makefile  pyproject.toml  test_cash_vs_concentration.py  test_phase3_integration.py
.github/instructions/: copilot-instructions.md
.github/prompts/: commit.prompt.md  unittest.prompt.md
.pre_commit_hooks/: pre-commit-config.yaml
config/: README.md  data_sources.yaml  portfolio.yaml  portfolio_multi_source.yaml  qtrader.yaml  system.yaml  template_portfolio.yaml
config/backtests/: README.md  multi_strategy_tech_vs_etf.yaml  single_strategy_sma.yaml  sma_vs_buyhold_50_50.yaml
data/: equity_security_master_sample.csv
data/csv/: AAPL.csv  AMZN.csv  MSFT.csv  secid_33449.csv
docs/: API_DESIGN.md  ARCHITECTURE_ALIGNMENT.md  AUDIT_TRAIL_ARCHITECTURE.md  BUG_FIXES_SUMMARY.md  CLI_LIST_COMMAND.md  CLI_REFACTORING_SUMMARY.md  CLI_USE_CASES_COMPATIBILITY.md  COMPLETE_ARCHITECTURAL_FIX.md  CONFIG_ALIGNMENT_DECISIONS.md  COVERAGE_ANALYSIS.md  CUSTOM_INDICATOR_STRATEGY_SUMMARY.md  DATA_CLI_USER_GUIDE.md  DATA_CONFIG_USAGE_AUDIT.md  DATA_LAYER_BEFORE_AFTER.md  DATA_LAYER_MIGRATION_PLAN.md  DATA_LAYER_MIGRATION_SUMMARY.md  DATA_LAYER_TEST_COVERAGE.md  DATA_SOURCE_SELECTOR_DESIGN.md  DATA_SOURCE_SELECTOR_IMPLEMENTATION.md  DATA_UPDATE_GUIDE.md  DATA_WORKFLOW_DUPLICATION_ANALYSIS.md  DOCUMENTATION_CONSOLIDATION.md  DOCUMENTATION_UPDATE_SUMMARY.md  GENERIC_DATA_UPDATE_COMPLETION.md  HANDLING_CORPORATE_EVENTS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  INSTRUMENT_DESIGN_RATIONALE.md  INSTRUMENT_MIGRATION_GUIDE.md  LIBRARY_REGISTRY_DESIGN.md  MULTI_MODE_ARCHITECTURE_DECISION.md  MULTI_STRATEGY_COMPLETE.md  MULTI_STRATEGY_REFACTORING.md  PHASE_1_TO_4_COMPLETE_SUMMARY.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_4_EXECUTION_ENGINE_COMPLETION.md  PHASE_4_PART_2_COMPLETION_SUMMARY.md  PHASE_4_PART_3_DIVIDEND_CLEANUP.md  PHASE_4_PART_3_DIVIDEND_FIX.md  (+52 more)
docs/archive/: SPEC_CONSOLIDATION_PLAN.md  implementation_plan_phase01.md.backup
docs/data_vendors/: algoseek_guide.md
docs/diagrams/: architecture.md  canonical_bar.md  my_view.drawio
docs/lego_architecture/: CLI_MIGRATION.md  CLI_STATUS.md  DATA_SOURCE_SELECTION.md  FOLDER_STRUCTURE.md  PHASE_1_COMPLETE.md  PHASE_1_TO_5_GAP_ANALYSIS.md  PHASE_2_KICKOFF.md  PHASE_3_IMPLEMENTATION_PLAN.md  README.md  STRATEGY_IMPLEMENTATION_PLAN.md  overview.md  phase1.5_events_and_corporate_actions.md  phase10_configuration.md  phase1_data_service.md  phase2_portfolio_service.md  phase2_portfolio_service_v3.md  phase3_execution_service.md  phase4_risk_service.md  phase5_backtest_engine.md  phase6_strategy_context.md  phase7_indicator_service.md  phase8_analytics_service.md  phase9_reporting_service.md
examples/: backtest_example.yaml  buy_and_hold_strategy.py  data_engine_streaming_example.py  data_service_example.py  data_source_selection.py  minimal_iterator_backtest.py  risk_signal_example.py  schwab_data_example.py  sma_crossover_strategy.py
experiments/: buy_hold.yaml  buy_hold_sample-csv-1d.yaml  sma.yaml  weekly_monday_friday_aapl_2020.yaml
playground/: export_parquet_sample_to_csv.py  export_sample_data.py
scripts/: generate_goldens.py  run_schwab_test.sh  test_schwab_aapl.py  test_schwab_oauth.py
tests/: README.md  conftest.py  test_split_accounting.py
(+531 files in other folders)
