[project]
name = "qtrader"
version = "0.1.0"
description = "Quantitative Trading Environment"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "QTrader", email = "q@qtrader.app" }]
maintainers = [{ name = "QTrader", email = "q@qtrader.app" }]

dependencies = [
    "duckdb>=1.4.0",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "click>=8.0.0",
    "pydantic>=2.11.9",
    "pyyaml>=6.0",
    "pytz>=2024.1",
    "structlog>=24.4.0",
    "requests>=2.32.5",
    "websockets>=15.0.1",
    "rich>=13.0.0",
    "cryptography>=46.0.2",
]

[project.scripts]
qtrader = "qtrader.cli:main"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-watch>=4.2.0",
    "mypy>=1.14.0",
    "ruff>=0.13.0",
    "mdformat>=0.7.21",
    "mdformat-gfm>=0.3.6",
    "mdformat-tables>=1.0.0",
    "mdformat-frontmatter>=2.0.8",
    "pandas-stubs>=2.3.2.250926",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]


# Tool configurations

[tool.uv]
package = true # Enable package installation for entry points

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src"]

[tool.mdformat]
wrap = "no"        # Do not wrap lines
end_of_line = "lf" # Use LF line endings (Unix style)

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Per-module options for third-party libraries without stubs
[[tool.mypy.overrides]]
module = "duckdb"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true
